# NexCRM

./: .gitignore  README.md  design_guidelines.json
backend/: .env.example  index.py  pyproject.toml  requirements.txt  server.py
backend/api/: [...path].py
backend/tests/: test_nexcrm.py
frontend/: .env  .env.example  craco.config.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/common/: ConfirmDialog.js  DataTable.js  EmptyState.js  PageHeader.js  StatusBadge.js
frontend/src/components/layout/: AppLayout.js  Header.js  PublicTopbar.js  Sidebar.js
frontend/src/components/ui/: calendar.jsx
frontend/src/context/: AuthContext.js  I18nContext.js  ThemeContext.js
frontend/src/data/: translations.js
frontend/src/lib/: exportCsv.js
frontend/src/pages/: AboutPage.js  AuditLogsPage.js  CustomersPage.js  DashboardPage.js  DealsPage.js  LandingPage.js  LoginPage.js  ReportsPage.js  SearchPage.js  TasksPage.js  UsersPage.js
frontend/src/services/: api.js  auditService.js  customersService.js  dashboardService.js  dealsService.js  searchService.js  tasksService.js  usersService.js
