[project]
name = "nexcrm-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.110.1",
  "uvicorn==0.25.0",
  "python-dotenv>=1.0.1",
  "pymongo==4.5.0",
  "motor==3.3.1",
  "pydantic>=2.6.4",
  "pyjwt>=2.10.1",
  "bcrypt==4.1.3",
  "dnspython>=2.6.1",
]

[project.scripts]
app = "server:app"
